--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,155 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.366
+head: 1.398
 branch:
 locks: strict
-	gilles: 1.366
+	gilles: 1.398
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 366;	selected revisions: 366
+total revisions: 398;	selected revisions: 398
 description:
 ----------------------------
-revision 1.366	locked by: gilles;
+revision 1.398	locked by: gilles;
+date: 2011/01/18 03:03:24;  author: gilles;  state: Exp;  lines: +7 -6
+Fix. Removed too much about buffersize.
+----------------------------
+revision 1.397
+date: 2011/01/18 02:39:12;  author: gilles;  state: Exp;  lines: +25 -19
+Changed --delete2foldersnot option name to --delete2foldersbutnot
+----------------------------
+revision 1.396
+date: 2011/01/18 02:03:49;  author: gilles;  state: Exp;  lines: +23 -11
+Added --authmd51 and --authmd52 options to allow CRAM-MD5 authentication per host.
+----------------------------
+revision 1.395
+date: 2011/01/15 04:57:28;  author: gilles;  state: Exp;  lines: +8 -8
+--debugimap* implies --debug now.
+----------------------------
+revision 1.394
+date: 2011/01/15 04:46:16;  author: gilles;  state: Exp;  lines: +21 -11
+Added info about biggest messages.
+----------------------------
+revision 1.393
+date: 2011/01/15 03:40:43;  author: gilles;  state: Exp;  lines: +7 -7
+*** empty log message ***
+----------------------------
+revision 1.392
+date: 2011/01/15 03:29:37;  author: gilles;  state: Exp;  lines: +17 -8
+Added --delete2foldersnot option: do not delete folders matching regex.
+----------------------------
+revision 1.391
+date: 2011/01/10 23:11:49;  author: gilles;  state: Exp;  lines: +7 -7
+*** empty log message ***
+----------------------------
+revision 1.390
+date: 2011/01/10 05:47:43;  author: gilles;  state: Exp;  lines: +403 -94
+Added --usecache option. Goal: speed up the synchronisation.
+----------------------------
+revision 1.389
+date: 2011/01/06 04:28:58;  author: gilles;  state: Exp;  lines: +7 -6
+Mirapoint host1 success
+----------------------------
+revision 1.388
+date: 2010/12/29 22:46:08;  author: gilles;  state: Exp;  lines: +44 -10
+Added help to guess separator and prefix when NAMESPACE is not available.
+----------------------------
+revision 1.387
+date: 2010/12/22 02:27:39;  author: gilles;  state: Exp;  lines: +13 -8
+Added option --delete2foldersonly <regex>: delete only folders matching regex.
+----------------------------
+revision 1.386
+date: 2010/12/09 22:34:25;  author: gilles;  state: Exp;  lines: +7 -7
+hMailServer 4.4.1
+----------------------------
+revision 1.385
+date: 2010/12/03 23:40:12;  author: gilles;  state: Exp;  lines: +34 -25
+Changed default behaviour: now --delete implies --expunge
+It is safer with multiples runs.
+----------------------------
+revision 1.384
+date: 2010/12/02 01:07:48;  author: gilles;  state: Exp;  lines: +48 -34
+Code cleanup.
+Wrote create_folder()
+Wrote select_folder()
+Simplified folder loop (a beginning)
+----------------------------
+revision 1.383
+date: 2010/11/28 04:28:52;  author: gilles;  state: Exp;  lines: +14 -12
+Allow size mismatch by default.
+Use --useheader 'Message-Id' by default.
+Use --noauthmd5  by default.
+Why? Because users don't have to spend time or mine reading or not
+reading the documentation, spend time turning on options to success.
+or speed.
+----------------------------
+revision 1.382
+date: 2010/11/19 21:31:35;  author: gilles;  state: Exp;  lines: +23 -12
+Added a way to handle no headers in messages: take first 2Ko body.
+----------------------------
+revision 1.381
+date: 2010/11/19 20:48:27;  author: gilles;  state: Exp;  lines: +7 -7
+Fixed 'ps' call for Solaris.
+----------------------------
+revision 1.380
+date: 2010/11/19 20:44:25;  author: gilles;  state: Exp;  lines: +12 -11
+updated success list.
+----------------------------
+revision 1.379
+date: 2010/11/12 00:44:02;  author: gilles;  state: Exp;  lines: +7 -7
+dkimap is now a success story!
+----------------------------
+revision 1.378
+date: 2010/11/12 00:22:59;  author: gilles;  state: Exp;  lines: +19 -11
+Added --nouid1 --nouid2 options to support dkimap and other imap server without uid capability.
+----------------------------
+revision 1.377
+date: 2010/11/09 02:12:40;  author: gilles;  state: Exp;  lines: +8 -7
+Added Authen::NTLM in modules_VERSION()
+----------------------------
+revision 1.376
+date: 2010/11/09 01:14:33;  author: gilles;  state: Exp;  lines: +17 -10
+Added --domain1 --domain2 options for NTLM authentication.
+----------------------------
+revision 1.375
+date: 2010/11/07 23:26:01;  author: gilles;  state: Exp;  lines: +12 -15
+Adapted documentation to new distribution rule.
+----------------------------
+revision 1.374
+date: 2010/11/07 18:31:06;  author: gilles;  state: Exp;  lines: +10 -7
+imapsync is no longer gratis on the homepage.
+----------------------------
+revision 1.373
+date: 2010/11/07 18:23:13;  author: gilles;  state: Exp;  lines: +7 -7
+ Smarter Mail 5.5
+----------------------------
+revision 1.372
+date: 2010/11/03 00:10:29;  author: gilles;  state: Exp;  lines: +9 -8
+No thanks for *.bin and *.exe
+----------------------------
+revision 1.371
+date: 2010/11/02 07:37:35;  author: gilles;  state: Exp;  lines: +9 -7
+hMailServer 5.3.3 [host2] success
+Oracle Beehive [host1] success
+----------------------------
+revision 1.370
+date: 2010/10/31 23:07:12;  author: gilles;  state: Exp;  lines: +7 -7
+Prepare to move from linux-france.org with independant name.
+----------------------------
+revision 1.369
+date: 2010/10/31 23:03:22;  author: gilles;  state: Exp;  lines: +9 -6
+No thanks with imapsync.exe just homepage link.
+----------------------------
+revision 1.368
+date: 2010/10/31 22:17:52;  author: gilles;  state: Exp;  lines: +9 -3
+Applied proxyauth-v2_1.366.patch on 1.366
+----------------------------
+revision 1.367
+date: 2010/10/31 00:01:44;  author: gilles;  state: Exp;  lines: +44 -13
+Applied patch patches/proxyauth_1.366.patch from Jorge López Pérez.
+----------------------------
+revision 1.366
 date: 2010/10/25 17:15:52;  author: gilles;  state: Exp;  lines: +11 -12
 Permit host* to have change the case of headers.
 ----------------------------
