--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.18 2010/10/25 09:32:49 gilles Exp gilles $
+# $Id: INSTALL,v 1.19 2010/11/09 02:52:18 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -93,9 +93,13 @@ Here is some individual module help:
 - Perl Digest::HMAC_MD5 module
   Good for non plain text password over network.
 
+- Perl Authen::NTLM
+  perl -mAuthen::NTLM -e ''
+
 Everything in one command:
 
-  perl -mMail::IMAPClient -mDigest::MD5 -mTerm::ReadKey -mIO::Socket::SSL -mFile::Spec -mDigest::HMAC_MD5 -e ''
+  perl -mMail::IMAPClient -mDigest::MD5 -mTerm::ReadKey -mIO::Socket::SSL \
+       -mFile::Spec -mDigest::HMAC_MD5 -mAuthen::NTLM -e ''
 
 INSTALLING
 ----------
