--- a/FAQ
+++ b/FAQ
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: FAQ,v 1.82 2011/01/15 06:32:12 gilles Exp gilles $
+# $Id: FAQ,v 1.83 2011/01/28 05:14:12 gilles Exp gilles $
 
 +------------------+
 | FAQ for imapsync |
@@ -446,6 +446,24 @@ R. try to transfer the mails without SSL connection. SSL code outside
    This does not occur without SSL.
 
 (Written by Stefan Schmidt)
+
+======================================================================
+Q. What are --subscribe and --subscribed for, and how can they be used?
+
+R. In the IMAP protocol each user can subscribe to one or more folders.
+   Then he can configure its email software to just see his subscribed
+   folders list. That's an IMAP feature.
+
+   Knowing that, the imapsync help says:
+
+  imapsync --help
+  ...
+  --subscribed           : transfers subscribed folders.
+  --subscribe            : subscribe to the folders transferred on the 
+                           host2 that are subscribed on host1.
+  --subscribe_all        : subscribe to the folders transferred on the 
+                           host2 even if they are not subscribed on host1.
+
 
 ======================================================================
 Q. I want to exclude a folder hierarchy like "public"
