--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 36 different IMAP server softwares supported with success.
 
-    $Revision: 1.398 $
+    $Revision: 1.404 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -371,7 +371,7 @@ IMAP SERVERS
 HUGE MIGRATION
     Pay special attention to options --subscribed --subscribe --delete
     --delete2 --delete2folders --expunge --expunge1 --expunge2 --uidexpunge2
-    --maxage --minage --maxsize --useheader --fast
+    --maxage --minage --maxsize --useheader --fast --useuid --usecache
 
     If you have many mailboxes to migrate think about a little shell
     program. Write a file called file.csv (for example) containing users and
@@ -417,5 +417,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.398 2011/01/18 03:03:24 gilles Exp gilles $
+    $Id: imapsync,v 1.404 2011/02/21 03:35:39 gilles Exp gilles $
 
