--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,45 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.398
+head: 1.404
 branch:
 locks: strict
-	gilles: 1.398
+	gilles: 1.404
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 398;	selected revisions: 398
+total revisions: 404;	selected revisions: 404
 description:
 ----------------------------
-revision 1.398	locked by: gilles;
+revision 1.404	locked by: gilles;
+date: 2011/02/21 03:35:39;  author: gilles;  state: Exp;  lines: +7 -7
+typo
+----------------------------
+revision 1.403
+date: 2011/02/21 00:52:16;  author: gilles;  state: Exp;  lines: +47 -7
+Added uid guessing with APPEND to improve --usecache for Exchange or Zarafa imap servers.
+----------------------------
+revision 1.402
+date: 2011/01/25 05:17:05;  author: gilles;  state: Exp;  lines: +47 -174
+Removed all the $imapX->IsUnconnected() since reconnect can be done.
+Overrided append_file() for 2.2.9, copy from 3.25
+----------------------------
+revision 1.401
+date: 2011/01/25 02:22:37;  author: gilles;  state: Exp;  lines: +195 -151
+Added --useuid to speed up or deal with problems using headers.
+Added --notakebody to avoid getting first 2Ko body when got "no header"
+Replaced --debug_cache by --debugcache
+----------------------------
+revision 1.400
+date: 2011/01/22 04:46:04;  author: gilles;  state: Exp;  lines: +94 -22
+Fixed cache (chose only the greatest uid with dupplicate 11_21+11_201 or 11_21+101_21)
+Fixed cache, dealing with filenames containing \ characters.
+----------------------------
+revision 1.399
+date: 2011/01/21 00:04:09;  author: gilles;  state: Exp;  lines: +29 -21
+Added --debug_cache option to alow cache dfebugging only.
+----------------------------
+revision 1.398
 date: 2011/01/18 03:03:24;  author: gilles;  state: Exp;  lines: +7 -6
 Fix. Removed too much about buffersize.
 ----------------------------
