--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.19 2010/11/09 02:52:18 gilles Exp gilles $
+# $Id: INSTALL,v 1.20 2011/05/07 02:14:58 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -7,15 +7,15 @@ INTRODUCTION
 ------------
 
  imapsync works fine under any Unix OS with perl.
- imapsync works fine under Windows (2000, XP) and ActiveState's 5.8 Perl
+ imapsync.exe works fine under Windows XP, Vista, Seven, 20XX.
 
- imapsync is already available directly on the following distributions (at least):
- FreeBSD, Debian, Ubuntu, Gentoo, NetBSD, Darwin, Mandriva and OpenBSD (yeah!).
 
- Get imapsync at
- http://www.linux-france.org/prj/imapsync/dist/
+UNIX
+----
 
- You'll find a compressed tarball called imapsync-x.xx.tgz
+ Buy imapsync at
+ http://www.linux-france.org/prj/imapsync/
+ You'll have access to a compressed tarball called imapsync-x.xx.tgz
  where x.xx is the version number. Untar the tarball where
  you want (on Unix):
 
@@ -24,13 +24,29 @@ INTRODUCTION
  Go into the directory imapsync-x.xx and read the INSTALL file.
  You're already reading the INSTALL file.
 
-GETTING
+WINDOWS
 -------
 
-http://www.linux-france.org/prj/imapsync/dist/
 
-PREREQUISITES
+a) Simplest way:
+
+- Buy imapsync.exe at http://www.linux-france.org/prj/imapsync/
+- Use imapsync.exe.
+
+b) Hard way:
+
+- Get imapsync-x.xx.tgz
+- Install Perl if it isn't already installed.
+  Strawberry Perl is a good candidate
+- Use PPM to install modules listed in the PREREQUISITES section.
+  PPM is Perl Package Manager.
+
+
+
+PREREQUISITES 
 -------------
+
+This section doesn't concern Windows imapsync.exe users.
 
 You need : 
 - Perl 
@@ -101,34 +117,21 @@ Everything in one command:
   perl -mMail::IMAPClient -mDigest::MD5 -mTerm::ReadKey -mIO::Socket::SSL \
        -mFile::Spec -mDigest::HMAC_MD5 -mAuthen::NTLM -e ''
 
-INSTALLING
-----------
+INSTALLING on Unix
+------------------
+
 To see what will be done, just run:
 
-make -n install
+  make -n install
 
 To install imapsync, just run:
 
-make install
+  make install
 
 or copy the file imapsync where you want it to be.
 
-WINDOWS
--------
-
-a) Simplest way:
-
-- Use imapsync.exe
-
-b) Hard way:
-
-- Install Perl if it isn't already installed.
-  Strawberry Perl is a good candidate
-- Use PPM to install modules listed in the PREREQUISITES section.
-  PPM is Perl Package Manager.
-
-TESTING
--------
+TESTING on Unix
+---------------
 
 The test will break as they are home specific.
 You need a running imap server on localhost with several accounts
