--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 36 different IMAP server softwares supported with success.
 
-    $Revision: 1.411 $
+    $Revision: 1.422 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -77,7 +77,7 @@ USAGE
                [--minage <int>]
                [--skipheader <regex>]
                [--useheader <string>] [--useheader <string>]
-               [--nouid1] [--nouid1] 
+               [--nouid1] [--nouid2] 
                [--usecache]
                [--skipsize] [--allowsizemismatch]
                [--delete] [--delete2]
@@ -332,10 +332,10 @@ IMAP SERVERS
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12, 11.03 [host1]
      - MailEnable 4.23 [host1] [host2]
-     - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform)
+     - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 12 [host2]
      - Mercury 4.1 (Windows server 2000 platform)
      - Microsoft Exchange Server 5.5, 6.0.6249.0[host1], 6.0.6487.0[host1], 
-       6.5.7638.1 [host2], Exchange 2007 SP1 (with Update Rollup 2), 
+       6.5.7638.1 [host2], 6.5 [host1], Exchange 2007 SP1 (with Update Rollup 2), 
        Exchange2007-EP-SP2, 
        Exchange 2010 RTM (Release to Manufacturing) [host2]
      - Mirapoint
@@ -422,5 +422,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.411 2011/04/19 23:34:30 gilles Exp gilles $
+    $Id: imapsync,v 1.422 2011/05/08 17:21:38 gilles Exp gilles $
 
