--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.95 2011/04/16 20:16:47 gilles Exp gilles $
+# $Id: TODO,v 1.96 2011/04/26 10:48:03 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -15,8 +15,6 @@ Add a best practice migration tips document.
 
 Write a Mail::imapsync package and use it.
 
-write a comment to http://blog.migrationwiz.com/2010/12/09/imapsync-vs-migrationwiz/
-
 Fix the mailing-list archive bug with From at
 the beginning of a line
 http://www.linux-france.org/prj/imapsync_list/msg00307.html
@@ -25,7 +23,10 @@ Evaluate
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
 
-Make --delete2 works with --useuid
+Fix Exchange 2010 SP1 issue with --foldersizes when
+host2 folders don't exist. $imap->exists calls STATUS.
+Is it RFC compliant or an Exchange bug?
+Exchange quit after 10 errors.
 
 Fix "\Forwarded" flag bug in courier.
 Does \lalala can be forbidden (courier does a 
@@ -157,6 +158,10 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
+
+DONE. Make --delete2 works with --useuid
+
+DONE. write a comment to http://blog.migrationwiz.com/2010/12/09/imapsync-vs-migrationwiz/
 
 DONE. Read http://bugs.gentoo.org/show_bug.cgi?id=354831
       Nice conversation.
